[gd_scene load_steps=29 format=3 uid="uid://b05uadrom8blw"]

[ext_resource type="Script" path="res://enemies/enemy_tri_eye.gd" id="1_dnkxr"]
[ext_resource type="Texture2D" uid="uid://cs1a11vty5ty0" path="res://assets/enemies/melee-Sheet.png" id="1_rbip2"]
[ext_resource type="PackedScene" uid="uid://cwipuv3723neg" path="res://player/character_components/hurtBox.tscn" id="2_vpbqo"]
[ext_resource type="PackedScene" uid="uid://dlubxqu2bs41o" path="res://player/character_components/health.tscn" id="4_p23gm"]
[ext_resource type="AudioStream" uid="uid://b5x306tvk8na0" path="res://assets/sounds/punch.mp3" id="5_4jx7u"]
[ext_resource type="AudioStream" uid="uid://cfhmmgy2nxoqc" path="res://assets/sounds/vanishing.mp3" id="6_y435f"]
[ext_resource type="AudioStream" uid="uid://fwuqbgdfquwx" path="res://assets/sounds/blood.mp3" id="7_41br4"]
[ext_resource type="AudioStream" uid="uid://meu22frdqyor" path="res://assets/sounds/deathmelee.mp3" id="8_yewor"]
[ext_resource type="AudioStream" uid="uid://duf5k5mapu0oj" path="res://assets/sounds/hit.mp3" id="9_0jeor"]
[ext_resource type="PackedScene" uid="uid://cppg4wlj741eq" path="res://enemies/components/healthBar.tscn" id="10_4yih6"]
[ext_resource type="Script" path="res://player/character_components/melee_collision_box.gd" id="10_gl5nr"]
[ext_resource type="AudioStream" uid="uid://bl3pes3880s5n" path="res://assets/sounds/idleenemy.mp3" id="11_1riay"]
[ext_resource type="AudioStream" uid="uid://bpg785jbmairf" path="res://assets/sounds/footstepsbloddy.mp3" id="11_70oxe"]
[ext_resource type="Texture2D" uid="uid://cyks626ojs2bj" path="res://assets/lights/light.png" id="11_tg382"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cquw7"]
radius = 3.5
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e2s3c"]
radius = 12.0
height = 54.0

[sub_resource type="Animation" id="Animation_xo2l5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MeleeCollisionBox:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MeleeCollisionBox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../MeleeCollisionBox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, -20)]
}

[sub_resource type="Animation" id="Animation_fe63q"]
resource_name = "attack_left"
step = 0.05
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_4jx7u")
}],
"times": PackedFloat32Array(0.3)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [96, 97, 98, 99, 100, 101, 102, 103, 104, 105]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MeleeCollisionBox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MeleeCollisionBox:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../MeleeCollisionBox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, -20)]
}

[sub_resource type="Animation" id="Animation_gec7l"]
resource_name = "attack_right"
step = 0.05
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_4jx7u")
}],
"times": PackedFloat32Array(0.25)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [120, 121, 122, 123, 124, 125, 126, 127, 128, 129]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MeleeCollisionBox:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MeleeCollisionBox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../MeleeCollisionBox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, -20)]
}

[sub_resource type="Animation" id="Animation_g5ehu"]
length = 2.3
step = 0.15
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 1.5403,
"stream": ExtResource("6_y435f")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_yewor")
}],
"times": PackedFloat32Array(-0.0355844, 0)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.714286, 1, 1.28571, 1.57143, 1.85714, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [192, 193, 194, 195, 196, 197, 198, 199, 200, 201]
}

[sub_resource type="Animation" id="Animation_56sli"]
resource_name = "hit_left"
length = 0.4
step = 0.1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_41br4")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0314822,
"stream": ExtResource("9_0jeor")
}],
"times": PackedFloat32Array(0.0314822)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [168, 169, 170, 171]
}

[sub_resource type="Animation" id="Animation_l1sij"]
resource_name = "hit_right"
length = 0.4
step = 0.1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_41br4")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0314822,
"stream": ExtResource("9_0jeor")
}],
"times": PackedFloat32Array(0.0314822)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [144, 145, 146, 147]
}

[sub_resource type="Animation" id="Animation_1hk04"]
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_1riay")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_1nsjn"]
resource_name = "idle_right"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_1riay")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_goxk4"]
resource_name = "walk_left"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.599058,
"start_offset": 0.0,
"stream": ExtResource("11_70oxe")
}, {
"end_offset": 0.118181,
"start_offset": 0.423823,
"stream": ExtResource("11_70oxe")
}],
"times": PackedFloat32Array(0, 0.2)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_eq8sx"]
resource_name = "walk_right"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.599058,
"start_offset": 0.0,
"stream": ExtResource("11_70oxe")
}, {
"end_offset": 0.118181,
"start_offset": 0.423823,
"stream": ExtResource("11_70oxe")
}],
"times": PackedFloat32Array(0, 0.2)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jtf3n"]
_data = {
"RESET": SubResource("Animation_xo2l5"),
"attack_left": SubResource("Animation_fe63q"),
"attack_right": SubResource("Animation_gec7l"),
"death": SubResource("Animation_g5ehu"),
"hit_left": SubResource("Animation_56sli"),
"hit_right": SubResource("Animation_l1sij"),
"idle_left": SubResource("Animation_1hk04"),
"idle_right": SubResource("Animation_1nsjn"),
"walk_left": SubResource("Animation_goxk4"),
"walk_right": SubResource("Animation_eq8sx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ki3i3"]
size = Vector2(27, 49)

[node name="EnemyTriEye" type="CharacterBody2D"]
y_sort_enabled = true
texture_filter = 3
collision_layer = 2048
collision_mask = 6159
script = ExtResource("1_dnkxr")
speed = 64

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rbip2")
centered = false
offset = Vector2(-32, -56)
hframes = 12
vframes = 17
region_rect = Rect2(133, 163, 26, 40)

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_cquw7")

[node name="HurtBox" parent="." instance=ExtResource("2_vpbqo")]
visible = false
position = Vector2(-7, -16)
collision_layer = 256
collision_mask = 192

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(7, -9)
shape = SubResource("CapsuleShape2D_e2s3c")

[node name="Health" parent="." instance=ExtResource("4_p23gm")]
max_health = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_jtf3n")
}

[node name="HealthBar" parent="." instance=ExtResource("10_4yih6")]
offset_left = -11.0
offset_top = -57.0
offset_right = 9.0
offset_bottom = -54.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 20.0
path_postprocessing = 1
avoidance_enabled = true
radius = 16.0
max_speed = 500.0

[node name="TrackingTimer" type="Timer" parent="NavigationAgent2D"]
wait_time = 0.1
autostart = true

[node name="MeleeCollisionBox" type="Area2D" parent="."]
position = Vector2(-20, -20)
collision_layer = 1024
collision_mask = 32
monitoring = false
monitorable = false
script = ExtResource("10_gl5nr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeCollisionBox"]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_ki3i3")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -15)
scale = Vector2(0.355469, 0.355469)
color = Color(0.999987, 0.335532, 0.269612, 1)
energy = 0.3
texture = ExtResource("11_tg382")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
